QA test evidence for Week 7

--- a/Harvey/Dataframe Compilation/Preprocessing_test.ipynb
+++ b/Harvey/Dataframe Compilation/Preprocessing_test.ipynb
@@ -1027,6 +1027,318 @@
     "\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-09-03</th>\n",
+       "      <td>126.91</td>\n",
+       "      <td>128.84</td>\n",
+       "      <td>120.50</td>\n",
+       "      <td>120.88</td>\n",
+       "      <td>257599600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-04</th>\n",
+       "      <td>120.07</td>\n",
+       "      <td>123.70</td>\n",
+       "      <td>110.89</td>\n",
+       "      <td>120.96</td>\n",
+       "      <td>332607200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-08</th>\n",
+       "      <td>113.95</td>\n",
+       "      <td>118.99</td>\n",
+       "      <td>112.68</td>\n",
+       "      <td>112.82</td>\n",
+       "      <td>231366600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-09</th>\n",
+       "      <td>117.26</td>\n",
+       "      <td>119.14</td>\n",
+       "      <td>115.26</td>\n",
+       "      <td>117.32</td>\n",
+       "      <td>176940500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-10</th>\n",
+       "      <td>120.36</td>\n",
+       "      <td>120.50</td>\n",
+       "      <td>112.50</td>\n",
+       "      <td>113.49</td>\n",
+       "      <td>182274400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-11</th>\n",
+       "      <td>114.57</td>\n",
+       "      <td>115.23</td>\n",
+       "      <td>110.00</td>\n",
+       "      <td>112.00</td>\n",
+       "      <td>180860300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-14</th>\n",
+       "      <td>114.72</td>\n",
+       "      <td>115.93</td>\n",
+       "      <td>112.80</td>\n",
+       "      <td>115.36</td>\n",
+       "      <td>140150100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-15</th>\n",
+       "      <td>118.33</td>\n",
+       "      <td>118.83</td>\n",
+       "      <td>113.61</td>\n",
+       "      <td>115.54</td>\n",
+       "      <td>184642000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-16</th>\n",
+       "      <td>115.23</td>\n",
+       "      <td>116.00</td>\n",
+       "      <td>112.04</td>\n",
+       "      <td>112.13</td>\n",
+       "      <td>154679000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-17</th>\n",
+       "      <td>109.72</td>\n",
+       "      <td>112.20</td>\n",
+       "      <td>108.71</td>\n",
+       "      <td>110.34</td>\n",
+       "      <td>178011000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-18</th>\n",
+       "      <td>110.40</td>\n",
+       "      <td>110.88</td>\n",
+       "      <td>106.09</td>\n",
+       "      <td>106.84</td>\n",
+       "      <td>287104900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-21</th>\n",
+       "      <td>104.54</td>\n",
+       "      <td>110.19</td>\n",
+       "      <td>103.10</td>\n",
+       "      <td>110.08</td>\n",
+       "      <td>195713800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-22</th>\n",
+       "      <td>112.68</td>\n",
+       "      <td>112.86</td>\n",
+       "      <td>109.16</td>\n",
+       "      <td>111.81</td>\n",
+       "      <td>183055400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-23</th>\n",
+       "      <td>111.62</td>\n",
+       "      <td>112.11</td>\n",
+       "      <td>106.77</td>\n",
+       "      <td>107.12</td>\n",
+       "      <td>150718700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-24</th>\n",
+       "      <td>105.17</td>\n",
+       "      <td>110.25</td>\n",
+       "      <td>105.00</td>\n",
+       "      <td>108.22</td>\n",
+       "      <td>167743300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-25</th>\n",
+       "      <td>108.43</td>\n",
+       "      <td>112.44</td>\n",
+       "      <td>107.67</td>\n",
+       "      <td>112.28</td>\n",
+       "      <td>149981400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-28</th>\n",
+       "      <td>115.01</td>\n",
+       "      <td>115.32</td>\n",
+       "      <td>112.78</td>\n",
+       "      <td>114.96</td>\n",
+       "      <td>137672400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-29</th>\n",
+       "      <td>114.55</td>\n",
+       "      <td>115.31</td>\n",
+       "      <td>113.57</td>\n",
+       "      <td>114.09</td>\n",
+       "      <td>99382200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-30</th>\n",
+       "      <td>113.79</td>\n",
+       "      <td>117.26</td>\n",
+       "      <td>113.62</td>\n",
+       "      <td>115.81</td>\n",
+       "      <td>142675200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>117.64</td>\n",
+       "      <td>117.72</td>\n",
+       "      <td>115.83</td>\n",
+       "      <td>116.79</td>\n",
+       "      <td>116120400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-02</th>\n",
+       "      <td>112.89</td>\n",
+       "      <td>115.37</td>\n",
+       "      <td>112.22</td>\n",
+       "      <td>113.02</td>\n",
+       "      <td>144310900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open    High     Low   Close     Volume  Dividends  Stock Splits\n",
+       "Date                                                                          \n",
+       "2020-09-03  126.91  128.84  120.50  120.88  257599600          0             0\n",
+       "2020-09-04  120.07  123.70  110.89  120.96  332607200          0             0\n",
+       "2020-09-08  113.95  118.99  112.68  112.82  231366600          0             0\n",
+       "2020-09-09  117.26  119.14  115.26  117.32  176940500          0             0\n",
+       "2020-09-10  120.36  120.50  112.50  113.49  182274400          0             0\n",
+       "2020-09-11  114.57  115.23  110.00  112.00  180860300          0             0\n",
+       "2020-09-14  114.72  115.93  112.80  115.36  140150100          0             0\n",
+       "2020-09-15  118.33  118.83  113.61  115.54  184642000          0             0\n",
+       "2020-09-16  115.23  116.00  112.04  112.13  154679000          0             0\n",
+       "2020-09-17  109.72  112.20  108.71  110.34  178011000          0             0\n",
+       "2020-09-18  110.40  110.88  106.09  106.84  287104900          0             0\n",
+       "2020-09-21  104.54  110.19  103.10  110.08  195713800          0             0\n",
+       "2020-09-22  112.68  112.86  109.16  111.81  183055400          0             0\n",
+       "2020-09-23  111.62  112.11  106.77  107.12  150718700          0             0\n",
+       "2020-09-24  105.17  110.25  105.00  108.22  167743300          0             0\n",
+       "2020-09-25  108.43  112.44  107.67  112.28  149981400          0             0\n",
+       "2020-09-28  115.01  115.32  112.78  114.96  137672400          0             0\n",
+       "2020-09-29  114.55  115.31  113.57  114.09   99382200          0             0\n",
+       "2020-09-30  113.79  117.26  113.62  115.81  142675200          0             0\n",
+       "2020-10-01  117.64  117.72  115.83  116.79  116120400          0             0\n",
+       "2020-10-02  112.89  115.37  112.22  113.02  144310900          0             0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from flask import Flask\n",
+    "from flask_sqlalchemy import SQLAlchemy\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import Table, Column, Integer, String, MetaData, ForeignKey\n",
+    "from sqlalchemy import inspect\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import psycopg2\n",
+    "import yfinance.__init__ as yf\n",
+    "import math\n",
+    "import datetime as dt\n",
+    "\n",
+    "stock = yf.Ticker(\"aapl\")\n",
+    "\n",
+    "# dt.date.fromtimestamp(stock.info[\"exDividendDate\"]).strftime('%d/%m/%Y')\n",
+    "\n",
+    "stock.history()"
+   ]
   }
  ],
  "metadata": {
