--- a/Harvey/Dataframe Compilation/Dataframe Processing.ipynb
+++ b/Harvey/Dataframe Compilation/Dataframe Processing.ipynb
@@ -2518,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2563,426 +2563,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-08-31</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2020-10-29</th>\n",
+       "      <td>589.0</td>\n",
+       "      <td>614.0</td>\n",
+       "      <td>587.5</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>23050460</td>\n",
        "      <td>0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-08-31</th>\n",
-       "      <td>481.26</td>\n",
-       "      <td>486.89</td>\n",
-       "      <td>474.00</td>\n",
-       "      <td>481.30</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2020-10-30</th>\n",
+       "      <td>597.0</td>\n",
+       "      <td>610.0</td>\n",
+       "      <td>584.5</td>\n",
+       "      <td>591.0</td>\n",
+       "      <td>24885040</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-31</th>\n",
-       "      <td>480.98</td>\n",
-       "      <td>487.75</td>\n",
-       "      <td>470.52</td>\n",
-       "      <td>485.85</td>\n",
-       "      <td>11751514.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-31</th>\n",
-       "      <td>485.96</td>\n",
-       "      <td>490.38</td>\n",
-       "      <td>482.65</td>\n",
-       "      <td>488.26</td>\n",
-       "      <td>9600089.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-31</th>\n",
-       "      <td>488.26</td>\n",
-       "      <td>499.00</td>\n",
-       "      <td>483.58</td>\n",
-       "      <td>498.38</td>\n",
-       "      <td>14941374.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-31</th>\n",
-       "      <td>498.26</td>\n",
-       "      <td>500.14</td>\n",
-       "      <td>495.11</td>\n",
-       "      <td>498.52</td>\n",
-       "      <td>8036505.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>499.46</td>\n",
-       "      <td>502.28</td>\n",
-       "      <td>470.51</td>\n",
-       "      <td>501.97</td>\n",
-       "      <td>38444462.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>501.97</td>\n",
-       "      <td>502.08</td>\n",
-       "      <td>485.00</td>\n",
-       "      <td>486.20</td>\n",
-       "      <td>12908562.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>486.06</td>\n",
-       "      <td>491.97</td>\n",
-       "      <td>481.26</td>\n",
-       "      <td>486.40</td>\n",
-       "      <td>7419767.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>486.60</td>\n",
-       "      <td>487.74</td>\n",
-       "      <td>477.51</td>\n",
-       "      <td>480.27</td>\n",
-       "      <td>7836187.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>480.54</td>\n",
-       "      <td>482.94</td>\n",
-       "      <td>473.03</td>\n",
-       "      <td>476.89</td>\n",
-       "      <td>8749325.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>476.99</td>\n",
-       "      <td>478.84</td>\n",
-       "      <td>472.42</td>\n",
-       "      <td>476.62</td>\n",
-       "      <td>7832852.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>476.57</td>\n",
-       "      <td>477.77</td>\n",
-       "      <td>473.80</td>\n",
-       "      <td>475.04</td>\n",
-       "      <td>5095045.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-02</th>\n",
-       "      <td>478.99</td>\n",
-       "      <td>479.04</td>\n",
-       "      <td>435.56</td>\n",
-       "      <td>451.29</td>\n",
-       "      <td>28244419.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-02</th>\n",
-       "      <td>451.17</td>\n",
-       "      <td>452.76</td>\n",
-       "      <td>423.11</td>\n",
-       "      <td>429.49</td>\n",
-       "      <td>14185274.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-02</th>\n",
-       "      <td>429.97</td>\n",
-       "      <td>443.50</td>\n",
-       "      <td>405.12</td>\n",
-       "      <td>440.31</td>\n",
-       "      <td>22448097.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-02</th>\n",
-       "      <td>440.50</td>\n",
-       "      <td>451.20</td>\n",
-       "      <td>436.60</td>\n",
-       "      <td>448.49</td>\n",
-       "      <td>9493631.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-02</th>\n",
-       "      <td>448.65</td>\n",
-       "      <td>450.50</td>\n",
-       "      <td>436.91</td>\n",
-       "      <td>442.50</td>\n",
-       "      <td>7402053.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-02</th>\n",
-       "      <td>442.50</td>\n",
-       "      <td>447.20</td>\n",
-       "      <td>440.11</td>\n",
-       "      <td>440.48</td>\n",
-       "      <td>5373380.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-02</th>\n",
-       "      <td>440.50</td>\n",
-       "      <td>448.73</td>\n",
-       "      <td>431.59</td>\n",
-       "      <td>447.20</td>\n",
-       "      <td>6357009.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-03</th>\n",
-       "      <td>407.23</td>\n",
-       "      <td>431.80</td>\n",
-       "      <td>405.00</td>\n",
-       "      <td>417.31</td>\n",
-       "      <td>26908207.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-03</th>\n",
-       "      <td>417.31</td>\n",
-       "      <td>422.41</td>\n",
-       "      <td>405.00</td>\n",
-       "      <td>413.98</td>\n",
-       "      <td>16574246.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-03</th>\n",
-       "      <td>413.81</td>\n",
-       "      <td>419.60</td>\n",
-       "      <td>411.02</td>\n",
-       "      <td>413.91</td>\n",
-       "      <td>8702756.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-03</th>\n",
-       "      <td>413.90</td>\n",
-       "      <td>415.00</td>\n",
-       "      <td>409.17</td>\n",
-       "      <td>412.28</td>\n",
-       "      <td>6517085.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-03</th>\n",
-       "      <td>412.21</td>\n",
-       "      <td>414.25</td>\n",
-       "      <td>405.00</td>\n",
-       "      <td>411.36</td>\n",
-       "      <td>8453677.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-03</th>\n",
-       "      <td>411.33</td>\n",
-       "      <td>413.30</td>\n",
-       "      <td>402.10</td>\n",
-       "      <td>403.52</td>\n",
-       "      <td>9690631.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-03</th>\n",
-       "      <td>403.53</td>\n",
-       "      <td>408.76</td>\n",
-       "      <td>402.00</td>\n",
-       "      <td>407.14</td>\n",
-       "      <td>6285798.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>402.81</td>\n",
-       "      <td>428.00</td>\n",
-       "      <td>385.80</td>\n",
-       "      <td>387.52</td>\n",
-       "      <td>33804402.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>387.13</td>\n",
-       "      <td>390.56</td>\n",
-       "      <td>372.02</td>\n",
-       "      <td>382.13</td>\n",
-       "      <td>17204753.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>382.44</td>\n",
-       "      <td>411.10</td>\n",
-       "      <td>382.02</td>\n",
-       "      <td>410.41</td>\n",
-       "      <td>13075105.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>410.27</td>\n",
-       "      <td>418.98</td>\n",
-       "      <td>400.10</td>\n",
-       "      <td>403.36</td>\n",
-       "      <td>14230656.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>403.02</td>\n",
-       "      <td>409.00</td>\n",
-       "      <td>401.50</td>\n",
-       "      <td>407.29</td>\n",
-       "      <td>6186016.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>407.29</td>\n",
-       "      <td>426.77</td>\n",
-       "      <td>405.60</td>\n",
-       "      <td>425.81</td>\n",
-       "      <td>13963082.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>425.85</td>\n",
-       "      <td>425.86</td>\n",
-       "      <td>415.52</td>\n",
-       "      <td>417.93</td>\n",
-       "      <td>6785164.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Open    High     Low   Close      Volume  Dividends  \\\n",
-       "Date                                                                \n",
-       "2020-08-31     NaN     NaN     NaN     NaN         NaN          0   \n",
-       "2020-08-31  481.26  486.89  474.00  481.30         0.0          0   \n",
-       "2020-08-31  480.98  487.75  470.52  485.85  11751514.0          0   \n",
-       "2020-08-31  485.96  490.38  482.65  488.26   9600089.0          0   \n",
-       "2020-08-31  488.26  499.00  483.58  498.38  14941374.0          0   \n",
-       "2020-08-31  498.26  500.14  495.11  498.52   8036505.0          0   \n",
-       "2020-09-01  499.46  502.28  470.51  501.97  38444462.0          0   \n",
-       "2020-09-01  501.97  502.08  485.00  486.20  12908562.0          0   \n",
-       "2020-09-01  486.06  491.97  481.26  486.40   7419767.0          0   \n",
-       "2020-09-01  486.60  487.74  477.51  480.27   7836187.0          0   \n",
-       "2020-09-01  480.54  482.94  473.03  476.89   8749325.0          0   \n",
-       "2020-09-01  476.99  478.84  472.42  476.62   7832852.0          0   \n",
-       "2020-09-01  476.57  477.77  473.80  475.04   5095045.0          0   \n",
-       "2020-09-02  478.99  479.04  435.56  451.29  28244419.0          0   \n",
-       "2020-09-02  451.17  452.76  423.11  429.49  14185274.0          0   \n",
-       "2020-09-02  429.97  443.50  405.12  440.31  22448097.0          0   \n",
-       "2020-09-02  440.50  451.20  436.60  448.49   9493631.0          0   \n",
-       "2020-09-02  448.65  450.50  436.91  442.50   7402053.0          0   \n",
-       "2020-09-02  442.50  447.20  440.11  440.48   5373380.0          0   \n",
-       "2020-09-02  440.50  448.73  431.59  447.20   6357009.0          0   \n",
-       "2020-09-03  407.23  431.80  405.00  417.31  26908207.0          0   \n",
-       "2020-09-03  417.31  422.41  405.00  413.98  16574246.0          0   \n",
-       "2020-09-03  413.81  419.60  411.02  413.91   8702756.0          0   \n",
-       "2020-09-03  413.90  415.00  409.17  412.28   6517085.0          0   \n",
-       "2020-09-03  412.21  414.25  405.00  411.36   8453677.0          0   \n",
-       "2020-09-03  411.33  413.30  402.10  403.52   9690631.0          0   \n",
-       "2020-09-03  403.53  408.76  402.00  407.14   6285798.0          0   \n",
-       "2020-09-04  402.81  428.00  385.80  387.52  33804402.0          0   \n",
-       "2020-09-04  387.13  390.56  372.02  382.13  17204753.0          0   \n",
-       "2020-09-04  382.44  411.10  382.02  410.41  13075105.0          0   \n",
-       "2020-09-04  410.27  418.98  400.10  403.36  14230656.0          0   \n",
-       "2020-09-04  403.02  409.00  401.50  407.29   6186016.0          0   \n",
-       "2020-09-04  407.29  426.77  405.60  425.81  13963082.0          0   \n",
-       "2020-09-04  425.85  425.86  415.52  417.93   6785164.0          0   \n",
-       "\n",
-       "            Stock Splits  \n",
-       "Date                      \n",
-       "2020-08-31           5.0  \n",
-       "2020-08-31           0.0  \n",
-       "2020-08-31           0.0  \n",
-       "2020-08-31           0.0  \n",
-       "2020-08-31           0.0  \n",
-       "2020-08-31           0.0  \n",
-       "2020-09-01           0.0  \n",
-       "2020-09-01           0.0  \n",
-       "2020-09-01           0.0  \n",
-       "2020-09-01           0.0  \n",
-       "2020-09-01           0.0  \n",
-       "2020-09-01           0.0  \n",
-       "2020-09-01           0.0  \n",
-       "2020-09-02           0.0  \n",
-       "2020-09-02           0.0  \n",
-       "2020-09-02           0.0  \n",
-       "2020-09-02           0.0  \n",
-       "2020-09-02           0.0  \n",
-       "2020-09-02           0.0  \n",
-       "2020-09-02           0.0  \n",
-       "2020-09-03           0.0  \n",
-       "2020-09-03           0.0  \n",
-       "2020-09-03           0.0  \n",
-       "2020-09-03           0.0  \n",
-       "2020-09-03           0.0  \n",
-       "2020-09-03           0.0  \n",
-       "2020-09-03           0.0  \n",
-       "2020-09-04           0.0  \n",
-       "2020-09-04           0.0  \n",
-       "2020-09-04           0.0  \n",
-       "2020-09-04           0.0  \n",
-       "2020-09-04           0.0  \n",
-       "2020-09-04           0.0  \n",
-       "2020-09-04           0.0  "
+       "             Open   High    Low  Close    Volume  Dividends  Stock Splits\n",
+       "Date                                                                     \n",
+       "2020-10-29  589.0  614.0  587.5  605.0  23050460          0             0\n",
+       "2020-10-30  597.0  610.0  584.5  591.0  24885040          0             0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3002,12 +2613,9 @@
     "import numpy as np\n",
     "from datetime import datetime\n",
     "\n",
-    "def get_price(stock,start,end):\n",
-    "    stock = yf.Ticker(stock)\n",
-    "    df = stock.history(start=start, end=end, interval=\"1h\")\n",
-    "    return df\n",
-    "\n",
-    "get_price(\"tsla\",\"2020-09-01\",\"2020-09-07\")"
+    "stock = yf.Ticker(\"0700.hk\")\n",
+    "df = stock.history(period=\"2d\")\n",
+    "df"
    ]
   }
  ],
